--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.1",
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
